syntax = "proto3";

package zerorobot;

import "domain.proto";

message ZeroRobot {
  string guid = 1;
  DomainPointer domain = 2;
  string description = 3; 
  LocationPointer location = 4;
  
  enum Status {
    INIT = 0;
    OK = 1;
    ERROR = 2;
    SCHEDULED = 3;
  }

  Status status = 5;

  string ipaddr = 6;

}

message ZerorobotPointer {
  string guid = 1;
  DomainPointer domain = 2;  
}  

message Location {
  string guid = 1;
  DomainPointer domain = 2;
  string description = 3; //the name of the action we want to execute
  
  enum Status {
    INIT = 0;
    OK = 1;
    ERROR = 2;
    SCHEDULED = 3;
  }

  Status status = 4;

}

message LocationPointer {
  string guid = 1;
  string name = 2;
  DomainPointer domain = 3;  
}  